--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
