--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "faker": "^5.5.3",
+    "firebase": "^8.5.0",
+    "mongoose": "^5.12.7",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
-    "passport-discord": "^0.1.4"
+    "passport-discord": "^0.1.4",
+    "random": "^3.0.6",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
