--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "abbt-castle",
-  "version": "1.0.0",
+  "name": "abby-castle",
+  "version": "2.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,12 +14,14 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "faker": "^5.5.3",
     "firebase": "^8.5.0",
+    "firebase-tools": "^9.10.2",
     "mongoose": "^5.12.7",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
